{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 1595,
  "lineage": "ab24ddef-939c-97ad-0ae0-5df9f40d52e1",
  "resources": [
    {
      "module": "module.ClusterSetup.module.aws_resources",
      "mode": "managed",
      "type": "aws_eip",
      "name": "thesis",
      "provider": "module.ClusterSetup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbae12ae237388fc",
            "domain": "vpc",
            "id": "eipalloc-0fbae12ae237388fc",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-74-12-146.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.74.12.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-thesis-nat"
            },
            "tags_all": {
              "Name": "dev-thesis-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ClusterSetup.module.aws_resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "thesis",
      "provider": "module.ClusterSetup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:843588259092:internet-gateway/igw-0388decf8274ae2d3",
            "id": "igw-0388decf8274ae2d3",
            "owner_id": "843588259092",
            "tags": {
              "Name": "dev-thesis"
            },
            "tags_all": {
              "Name": "dev-thesis"
            },
            "vpc_id": "vpc-0dc24616122d27001"
          },
          "dependencies": [
            "module.ClusterSetup.module.aws_resources.aws_vpc.thesis"
          ]
        }
      ]
    },
    {
      "module": "module.ClusterSetup.module.aws_resources",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "thesis",
      "provider": "module.ClusterSetup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbae12ae237388fc",
            "connectivity_type": "public",
            "id": "nat-03c533378ea6b2d2e",
            "network_interface_id": "eni-051ea49a4adf69551",
            "private_ip": "10.19.2.65",
            "public_ip": "3.74.12.146",
            "subnet_id": "subnet-08f3ac9e14c702013",
            "tags": {
              "Name": "dev-thesis"
            },
            "tags_all": {
              "Name": "dev-thesis"
            }
          },
          "dependencies": [
            "module.ClusterSetup.module.aws_resources.aws_eip.thesis",
            "module.ClusterSetup.module.aws_resources.aws_internet_gateway.thesis",
            "module.ClusterSetup.module.aws_resources.aws_subnet.thesis-public",
            "module.ClusterSetup.module.aws_resources.aws_vpc.thesis"
          ]
        }
      ]
    },
    {
      "module": "module.ClusterSetup.module.aws_resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.ClusterSetup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:843588259092:route-table/rtb-00795d11bc856ad7c",
            "id": "rtb-00795d11bc856ad7c",
            "owner_id": "843588259092",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03c533378ea6b2d2e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-thesis-private"
            },
            "tags_all": {
              "Name": "dev-thesis-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc24616122d27001"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ClusterSetup.module.aws_resources.aws_eip.thesis",
            "module.ClusterSetup.module.aws_resources.aws_internet_gateway.thesis",
            "module.ClusterSetup.module.aws_resources.aws_nat_gateway.thesis",
            "module.ClusterSetup.module.aws_resources.aws_subnet.thesis-public",
            "module.ClusterSetup.module.aws_resources.aws_vpc.thesis"
          ]
        }
      ]
    },
    {
      "module": "module.ClusterSetup.module.aws_resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.ClusterSetup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:843588259092:route-table/rtb-0e78b32bfc583d538",
            "id": "rtb-0e78b32bfc583d538",
            "owner_id": "843588259092",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0388decf8274ae2d3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-thesis-public"
            },
            "tags_all": {
              "Name": "dev-thesis-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc24616122d27001"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ClusterSetup.module.aws_resources.aws_internet_gateway.thesis",
            "module.ClusterSetup.module.aws_resources.aws_vpc.thesis"
          ]
        }
      ]
    },
    {
      "module": "module.ClusterSetup.module.aws_resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.ClusterSetup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cfb5a00bd607cab",
            "route_table_id": "rtb-0e78b32bfc583d538",
            "subnet_id": "subnet-08f3ac9e14c702013"
          },
          "dependencies": [
            "module.ClusterSetup.module.aws_resources.aws_internet_gateway.thesis",
            "module.ClusterSetup.module.aws_resources.aws_route_table.public",
            "module.ClusterSetup.module.aws_resources.aws_subnet.thesis-public",
            "module.ClusterSetup.module.aws_resources.aws_vpc.thesis"
          ]
        }
      ]
    },
    {
      "module": "module.ClusterSetup.module.aws_resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "thesis-private-1a",
      "provider": "module.ClusterSetup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e45024ac9174b2b5",
            "route_table_id": "rtb-00795d11bc856ad7c",
            "subnet_id": "subnet-07fdbc9db915aeca6"
          },
          "dependencies": [
            "module.ClusterSetup.module.aws_resources.aws_eip.thesis",
            "module.ClusterSetup.module.aws_resources.aws_internet_gateway.thesis",
            "module.ClusterSetup.module.aws_resources.aws_nat_gateway.thesis",
            "module.ClusterSetup.module.aws_resources.aws_route_table.private",
            "module.ClusterSetup.module.aws_resources.aws_subnet.thesis-private-1a",
            "module.ClusterSetup.module.aws_resources.aws_subnet.thesis-public",
            "module.ClusterSetup.module.aws_resources.aws_vpc.thesis"
          ]
        }
      ]
    },
    {
      "module": "module.ClusterSetup.module.aws_resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "thesis-public-1b",
      "provider": "module.ClusterSetup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b704041c995e5dc8",
            "route_table_id": "rtb-00795d11bc856ad7c",
            "subnet_id": "subnet-052b480657c868055"
          },
          "dependencies": [
            "module.ClusterSetup.module.aws_resources.aws_eip.thesis",
            "module.ClusterSetup.module.aws_resources.aws_internet_gateway.thesis",
            "module.ClusterSetup.module.aws_resources.aws_nat_gateway.thesis",
            "module.ClusterSetup.module.aws_resources.aws_route_table.private",
            "module.ClusterSetup.module.aws_resources.aws_subnet.thesis-private-1b",
            "module.ClusterSetup.module.aws_resources.aws_subnet.thesis-public",
            "module.ClusterSetup.module.aws_resources.aws_vpc.thesis"
          ]
        }
      ]
    },
    {
      "module": "module.ClusterSetup.module.aws_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "thesis-private-1a",
      "provider": "module.ClusterSetup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:843588259092:subnet/subnet-07fdbc9db915aeca6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.19.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fdbc9db915aeca6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843588259092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-thesis-private-1a",
              "kubernetes.io/cluster/dev-thesis-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-thesis-private-1a",
              "kubernetes.io/cluster/dev-thesis-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dc24616122d27001"
          },
          "dependencies": [
            "module.ClusterSetup.module.aws_resources.aws_vpc.thesis"
          ]
        }
      ]
    },
    {
      "module": "module.ClusterSetup.module.aws_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "thesis-private-1b",
      "provider": "module.ClusterSetup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:843588259092:subnet/subnet-052b480657c868055",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.19.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052b480657c868055",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843588259092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-thesis-private-1b",
              "kubernetes.io/cluster/dev-thesis-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-thesis-private-1b",
              "kubernetes.io/cluster/dev-thesis-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dc24616122d27001"
          },
          "dependencies": [
            "module.ClusterSetup.module.aws_resources.aws_vpc.thesis"
          ]
        }
      ]
    },
    {
      "module": "module.ClusterSetup.module.aws_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "thesis-public",
      "provider": "module.ClusterSetup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:843588259092:subnet/subnet-08f3ac9e14c702013",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.19.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f3ac9e14c702013",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "843588259092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-thesis-public",
              "kubernetes.io/cluster/dev-thesis-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-thesis-public",
              "kubernetes.io/cluster/dev-thesis-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dc24616122d27001"
          },
          "dependencies": [
            "module.ClusterSetup.module.aws_resources.aws_vpc.thesis"
          ]
        }
      ]
    },
    {
      "module": "module.ClusterSetup.module.aws_resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "thesis",
      "provider": "module.ClusterSetup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:843588259092:vpc/vpc-0dc24616122d27001",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.19.0.0/16",
            "default_network_acl_id": "acl-00c6fbb179e08fb58",
            "default_route_table_id": "rtb-026d6561798354d20",
            "default_security_group_id": "sg-0478b05aa44473fec",
            "dhcp_options_id": "dopt-0af09aaf84dbbd12a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc24616122d27001",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026d6561798354d20",
            "owner_id": "843588259092",
            "tags": {
              "Name": "dev-thesis-vpc"
            },
            "tags_all": {
              "Name": "dev-thesis-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.ClusterSetup.module.kubernetes_resources",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "argo_cd",
      "provider": "module.ClusterSetup.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd-system",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "created_by": "terraform"
                },
                "name": "argocd-system",
                "resource_version": "1262",
                "uid": "fa6bf07c-07c6-4eab-af59-613544d566af"
              }
            ]
          },
          "dependencies": [
            "module.ClusterSetup.data.aws_eks_cluster_auth.thesis",
            "module.ClusterSetup.module.aws_resources.aws_eip.thesis",
            "module.ClusterSetup.module.aws_resources.aws_eks_cluster.thesis",
            "module.ClusterSetup.module.aws_resources.aws_eks_node_group.private-nodes",
            "module.ClusterSetup.module.aws_resources.aws_iam_openid_connect_provider.eks",
            "module.ClusterSetup.module.aws_resources.aws_iam_policy.external-secrets-irsa",
            "module.ClusterSetup.module.aws_resources.aws_iam_policy.thesis-sa-allow-everything",
            "module.ClusterSetup.module.aws_resources.aws_iam_role.external-secrets-irsa",
            "module.ClusterSetup.module.aws_resources.aws_iam_role.nodes",
            "module.ClusterSetup.module.aws_resources.aws_iam_role.thesis-cluster",
            "module.ClusterSetup.module.aws_resources.aws_iam_role.thesis-sa",
            "module.ClusterSetup.module.aws_resources.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.ClusterSetup.module.aws_resources.aws_iam_role_policy_attachment.AmazonEKSVPCResourceController",
            "module.ClusterSetup.module.aws_resources.aws_iam_role_policy_attachment.external-secrets-irsa",
            "module.ClusterSetup.module.aws_resources.aws_iam_role_policy_attachment.nodes-AmazonEC2ContainerRegistryReadOnly",
            "module.ClusterSetup.module.aws_resources.aws_iam_role_policy_attachment.nodes-AmazonEKSWorkerNodePolicy",
            "module.ClusterSetup.module.aws_resources.aws_iam_role_policy_attachment.nodes-AmazonEKS_CNI_Policy",
            "module.ClusterSetup.module.aws_resources.aws_iam_role_policy_attachment.test_attach",
            "module.ClusterSetup.module.aws_resources.aws_internet_gateway.thesis",
            "module.ClusterSetup.module.aws_resources.aws_nat_gateway.thesis",
            "module.ClusterSetup.module.aws_resources.aws_route_table.private",
            "module.ClusterSetup.module.aws_resources.aws_route_table.public",
            "module.ClusterSetup.module.aws_resources.aws_route_table_association.public",
            "module.ClusterSetup.module.aws_resources.aws_route_table_association.thesis-private-1a",
            "module.ClusterSetup.module.aws_resources.aws_route_table_association.thesis-public-1b",
            "module.ClusterSetup.module.aws_resources.aws_subnet.thesis-private-1a",
            "module.ClusterSetup.module.aws_resources.aws_subnet.thesis-private-1b",
            "module.ClusterSetup.module.aws_resources.aws_subnet.thesis-public",
            "module.ClusterSetup.module.aws_resources.aws_vpc.thesis",
            "module.ClusterSetup.module.aws_resources.data.aws_caller_identity.current",
            "module.ClusterSetup.module.aws_resources.data.aws_iam_policy_document.external-secrets-irsa-assume",
            "module.ClusterSetup.module.aws_resources.data.aws_iam_policy_document.thesis-sa-assume",
            "module.ClusterSetup.module.aws_resources.data.tls_certificate.eks"
          ]
        }
      ]
    }
  ]
}